--- a/index.html
+++ b/index.html
@@ -1,1 +1,95 @@
-<h1>It works!</h1>
+<!DOCTYPE html>
+<html lang="en" class="fullscreen">
+
+<head>
+	<title>Home v4 | Repute - Responsive Multipurpose Bootstrap Theme</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Responsive Multipurpose Bootstrap Theme">
+	<meta name="author" content="The Develovers">
+	<!-- CSS -->
+	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
+	<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="assets/css/main.css" rel="stylesheet" type="text/css">
+	<link href="assets/css/my-custom-styles.css" rel="stylesheet" type="text/css">
+	
+	<!-- IE 9 Fallback-->
+	<!--[if IE 9]>
+		<link href="assets/css/ie.css" rel="stylesheet">
+	<![endif]-->
+	<!-- GOOGLE FONTS -->
+	<link href="https://fonts.googleapis.com/css?family=David+Libre" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400italic,700,400,300" rel="stylesheet" type="text/css">
+	<!-- FAVICONS -->
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/repute144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
+	<link rel="shortcut icon" href="assets/ico/favicon.png">
+</head>
+
+<body>
+	<!-- WRAPPER -->
+	<div class="wrapper">
+		<!-- NAVBAR -->
+		<nav class="navbar navbar-default navbar-transparent " role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<a href="index.html" class="navbar-brand navbar-logo">
+						<img src="assets/img/logo/ofecsLogo1.png" alt="Repute - Responsive Multipurpose Bootstrap Theme">
+					</a>
+				</div>
+			</div>
+		</nav>
+		<!-- END NAVBAR -->
+		<!-- HERO SECTION -->
+		<section class="hero-unit-fullscreen">
+			<div class="overlay"></div>
+			<div class="container">
+				<div class="left">
+					<h2 class="hero-heading">OFECS</h2>
+					<p class="lead">A statement that piques the curiosity of a reader . . .<br>
+						<a href="en-us/index.html" class="btn btn-lg hero-button-eng btn-rounded-3x">ENGLISH</a>
+						<a href="es-us/index.html" class="btn btn-lg hero-button-esp btn-rounded-3x">ESPAÑOL</a>
+					</p>
+					
+				</div>
+			</div>
+		</section>
+		<!-- END HERO SECTION -->
+		<!-- CALL-TO-ACTION -->
+		<section class="call-to-action">
+			<div class="container">
+				<div class="pull-left">
+					<h2 class="section-heading">GET IN TOUCH</h2>
+				</div>
+				<div class="pull-right">
+					<span>Call us at <a href=tel:9194897564>(919) 489 - 7564</a>
+				</div>
+			</div>
+		</section>
+		<!-- END CALL-TO-ACTION -->
+		<!-- FOOTER -->
+		<footer>
+			<!-- COPYRIGHT -->
+			<div class="text-center copyright">
+				&copy;2016 OFECS. All Rights Reserved. <br> Design by: Meli & Nixon
+			</div>
+			<!-- END COPYRIGHT -->
+		</footer>
+		<!-- END FOOTER -->
+	</div>
+	<!-- END WRAPPER -->
+	<!-- JAVASCRIPTS -->
+	<script src="assets/js/jquery-2.1.1.min.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/plugins/slick/slick.min.js"></script>
+	<script src="assets/js/plugins/easing/jquery.easing.min.js"></script>
+	<script src="assets/js/plugins/scrollto/jquery.localscroll-1.2.7-min.js"></script>
+	<script src="assets/js/plugins/scrollto/jquery.scrollTo-1.4.3.1-min.js"></script>
+	<script src="assets/js/plugins/autohidingnavbar/jquery.bootstrap-autohidingnavbar.min.js"></script>
+	<script src="assets/js/repute-scripts.js"></script>
+	
+</body>
+
+</html>
